--- a/css/shows.css
+++ b/css/shows.css
@@ -24,8 +24,9 @@ body{
 		width:85%;
 		height:85%;
 	}
-	.container.h-100{
-		
+	#tix{
+		margin-bottom: 40px; 
+		margin-top:40px;
 	}
 }
 
@@ -34,7 +35,8 @@ body{
 		width:90%; 	/*45%*/
 		height: 90%;
 	}
-	#flyer{
-
+	#tix{
+		margin-bottom: 70px; 
+		margin-top:70px;
 	}
 }
