--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,34 @@ html, body{
 	height: 100%;
 }
 
+
+
+.line-1{
+    border-right: 2px solid rgba(0,0,0,.75);
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 2em;
+    font-weight: 900;
+    font-family: helvetica neue;
+    color: #333;
+}
+
+
+.anim-typewriter{
+  animation: typewriter 4s steps(44) 1s 1 normal both,
+             blinkTextCursor 1000ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+  from{width: 0;}
+  to{width: 7.6em;}
+}
+@keyframes blinkTextCursor{
+  from{border-right: 2px solid rgba(0,0,0,.75);}
+  to{border-right: none;}
+}
+
+
+
 /*Menu*/
 .menu-i{
     position: fixed;
@@ -45,10 +73,10 @@ html, body{
 
 @media(min-width: 0px){
 	#menu-item-roy{
-		padding:20px;
+		padding:21px;
 	}
 	#menu-item-roy img{
-		width:90px;
+		width:130px;
 	}
 	.menu-i a{
 		font-size:15px;
@@ -60,10 +88,10 @@ html, body{
 
 @media(min-width: 650px){
 	#menu-item-roy{
-		padding:40px;
+		padding:50px;
 	}
 	#menu-item-roy img{
-		width:140px;
+		width:200px;
 	}
 	.menu-i a{
 		font-size:18px;
