--- a/css/home.css
+++ b/css/home.css
@@ -1,11 +1,11 @@
 .line-1{
-    border-right: 2px solid rgba(0,0,0,.75);
+    border-right: 2px solid rgba(255,255,255,.75);
     white-space: nowrap;
     overflow: hidden;
-    font-size: 2em;
+    font-size: 3.2em;
     font-weight: 900;
     font-family: helvetica neue;
-    color: #333;
+    color: #fff;
 }
 .anim-typewriter{
   animation: typewriter 4s steps(44) 1s 1 normal both,
@@ -16,6 +16,6 @@
   to{width: 7.6em;}
 }
 @keyframes blinkTextCursor{
-  from{border-right: 2px solid rgba(0,0,0,.75);}
+  from{border-right: 2px solid rgba(255,255,255,.75);}
   to{border-right: none;}
 }
