--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,13 @@ html, body{
 }
 
 .menu-i a, .menu-i a:hover{
-	color:#333;
+	color:#fff;
 	text-decoration: none;
 	font-weight: 700;
 }
 
 .menu-i .active{
-	border-bottom: 2px solid #333;
+	border-bottom: 2px solid #fff;
 }
 
 #menu-item-music{
