--- a/css/home.css
+++ b/css/home.css
@@ -19,3 +19,12 @@
   from{border-right: 2px solid rgba(255,255,255,.75);}
   to{border-right: none;}
 }
+
+#links{
+      margin-top: 15%;
+}
+#links img{
+    width: 24px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
