--- a/css/shows.css
+++ b/css/shows.css
@@ -10,13 +10,13 @@
 }
 
 #tickets-link{
-	color:#333;
+	color:#fff;
 	font-size: 30px;
 	font-weight: 800;
 }
 
 body{
-	background-color: #f1edec !important;
+	background-color: #f3d55e !important;
 }
 
 @media(min-width: 0px){
