--- a/css/shows.css
+++ b/css/shows.css
@@ -16,7 +16,7 @@
 }
 
 body{
-	background-color: #d4d4f5 !important;	/*f3d55e*/
+	background-color: #efc9eb !important;	/*f3d55e*/
 }
 
 @media(min-width: 0px){
