made things prettier

--- a/css/home.css
+++ b/css/home.css
@@ -1,26 +1,26 @@
-.line-1{
+#typedtext{
     border-right: 2px solid rgba(255,255,255,.75);
-    white-space: nowrap;
-    overflow: hidden;
     font-weight: 900;
     font-family: helvetica neue;
     color: #fff;
 }
-.anim-typewriter{
-  animation: typewriter 4s steps(44) 1s 1 normal both,
-             blinkTextCursor 1000ms steps(44) infinite normal;
+
+
+#typedtext{
+  animation: blinkTextCursor 1000ms infinite normal;
 }
-@keyframes typewriter{
-  from{width: 0;}
-  to{width: 7.6em;}
-}
+
 @keyframes blinkTextCursor{
-  from{border-right: 2px solid rgba(255,255,255,.75);}
-  to{border-right: none;}
+    49% {
+        border-right: 2px solid rgba(255,255,255,1);
+    }
+    50%, 100% {
+        border-right: 2px solid rgba(255,255,255,0);
+    }
 }
 
 #links{
-      margin-top: 12%;
+      margin-top: 2.8%;
 }
 #links img{
     width: 24px;
@@ -32,14 +32,8 @@
   body{
     background: url(../img/roy-bg3.jpg);
   }
-  .line-1{
+  #typedtext{
     font-size: 2.2em;
-  }
-  #first{
-    margin-left:5px;
-  }
-  #last{
-    margin-right: 15px !important;
   }
 }
 
@@ -47,14 +41,9 @@
   body{
     background: url(../img/roy-bg6.jpg);
   }
-  .line-1{
+  #typedtext{
     font-size: 3.2em;
   }
 
-  #first{
-    margin-left: 76px !important;
-  }
-  #last{
-    margin-right: 100px !important;
-  }
+
 }
