--- a/css/shop.css
+++ b/css/shop.css
@@ -59,3 +59,75 @@
     padding-bottom: 0px;
   }
 }
+
+
+/**************************/
+
+.selected-shop-item{
+  width:370px;
+  display: block;
+  margin: 0 auto;
+}
+
+.product-name{
+    margin-bottom: 0.4em;
+    font-weight: 700;
+    letter-spacing: .4px;
+    font-size: 18px;
+    line-height: 15.5px;
+    text-transform: uppercase;
+    padding-top:10px;
+}
+
+.price{
+    font-size: 13px;
+    font-style: normal;
+    line-height: 15.5px;
+    margin-bottom: 35px;
+    font-weight: normal;
+    letter-spacing: .4px;
+}
+
+.product-description{
+  font-size: 0.75em;
+  text-transform: uppercase;
+  margin-top: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
