--- a/css/music.css
+++ b/css/music.css
@@ -1,3 +1,7 @@
+body{
+  background: url(../img/backgrounds/light-blue.jpg);
+}
+
 .line-1{
     border-right: 2px solid rgba(255,255,255,.75);
     white-space: nowrap;
