--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
+body{
+  background: url(../img/backgrounds/light-purple.jpg);
+}
+
 #typedtext{
     border-right: 2px solid rgba(255,255,255,.75);
     font-weight: 900;
@@ -41,18 +45,12 @@
 }
 
 @media(min-width: 0px){
-  body{
-    background: url(../img/roy-bg8.jpg);
-  }
   #typedtext{
     font-size: 2.2em;
   }
 }
 
 @media(min-width: 650px){
-  body{
-    background: url(../img/roy-bg6.jpg);
-  }
   #typedtext{
     font-size: 3.2em;
   }
