--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ p{
     z-index: 1000;
 }
 
+.w-img a img{
+	height:21px;
+}
+
 .menu-i a, .menu-i a:hover{
 	color:#fff;
 	text-decoration: none;
