--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,6 @@ p{
     z-index: 1000;
 }
 
-.w-img a img{
-	height:21px;
-}
-
 .menu-i a, .menu-i a:hover{
 	color:#fff;
 	text-decoration: none;
@@ -57,7 +53,7 @@ p{
 
 @media(min-width: 0px){
 	#menu-item-roy{
-		padding:21px;
+		padding:16px;
 	}
 	#menu-item-roy img{
 		width:130px;
@@ -66,7 +62,30 @@ p{
 		font-size:15px;
 	}
 	.menu-i{
-		padding: 25px;
+		padding: 18px;
+	}
+	.w-img a img{
+		height:17px;
+	}
+	#music-underline{
+		width:64px;
+		height: auto;
+		margin-top: -14px;
+	}
+	#shows-underline{
+		width:69px;height: 8.5px !important;margin-top: -14px;
+	}
+	#menu-item-lookbook a img{
+		height:24px;
+	}
+	#menu-item-credits a img{
+		height:18px;
+	}
+	#lookbook-underline{
+		width:111px;height:8.5px !important;margin-top: 2px;position: absolute;
+	}
+	#credits-underline{
+		width:70px;height: 8.5px !important;margin-top: 2px;position: absolute;
 	}
 }
 
@@ -82,6 +101,37 @@ p{
 	}
 	.menu-i{
 		padding: 50px;
+	}
+	.w-img a img{
+		height:21px;
+	}
+
+	#menu-item-lookbook a img{
+		height:29px
+	}
+
+	#menu-item-credits a img{
+		height:23px
+	}
+	#music-underline{
+		width:80px;
+		height: auto;
+		margin-top: -14px;
+	}
+	#shows-underline{
+		width:86px;height: 8.5px;margin-top: -14px;
+	}
+	#menu-item-lookbook a img{
+		height:29px;
+	}
+	#menu-item-credits a img{
+		height:23px;
+	}
+	#lookbook-underline{
+		width:134px;height:8.5px;margin-top: 2px;position: absolute;
+	}
+	#credits-underline{
+		width:88px;height: 8.5px;margin-top: 2px;position: absolute;
 	}
 }
 
