--- a/css/home.css
+++ b/css/home.css
@@ -1,39 +1,3 @@
-body{
-  background: url(../img/backgrounds/light-purple.jpg);
-}
-
-#typedtext{
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-weight: 700;
-    color: #fff;
-}
-
-#menu-item-plus{
-    left: 50%;
-    transform: translate(-50%, 0);
-    z-index:2;
-    bottom:0;
-    position: absolute;
-}
-
-#menu-item-plus img{
-  width:24px;
-  cursor: pointer;
-}
-
-#typedtext{
-  animation: blinkTextCursor 1000ms infinite normal;
-}
-
-@keyframes blinkTextCursor{
-    49% {
-        border-right: 2px solid rgba(255,255,255,1);
-    }
-    50%, 100% {
-        border-right: 2px solid rgba(255,255,255,0);
-    }
-}
-
 #links{
       margin-top: 2.8%;
 }
@@ -43,14 +7,100 @@ body{
     margin-right: 5px;
 }
 
+
+li{
+  color: #ff0000eb;
+  font-weight: 800;
+  text-align: right;
+  font-size: 1.13em;
+  height: 18px;
+  -webkit-transform:scale(1,0.95); /* Safari and Chrome */
+  -moz-transform:scale(1,0.95); /* Firefox */
+  -ms-transform:scale(1,0.95); /* IE 9 */
+  -o-transform:scale(1,0.95); /* Opera */
+  transform:scale(1,0.95); /* W3C */
+}
+
+ul {
+    list-style:none;
+    -webkit-padding-start: 0px;
+    float:right;
+}
+a {
+    position: relative;
+}
+a:hover{
+  text-decoration: none !important;
+}
+#shop-tab:hover::before, #shows-tab:hover::before, #music-tab:hover::before, #credits-tab:hover::before{
+    content:'_ ';
+    color: #ff0000eb;
+    font-weight: 900;
+    font-size: 2em;
+    position: absolute;
+    top:-33px;
+    display:inline-block;
+    -webkit-transform:scale(1,1.7); /* Safari and Chrome */
+    -moz-transform:scale(1,1.7); /* Firefox */
+    -ms-transform:scale(1,1.7); /* IE 9 */
+    -o-transform:scale(1,1.7); /* Opera */
+    transform:scale(1,1.7); /* W3C */
+}
+
+#shop-tab:hover::before{
+    left: -4px;   
+}
+
+#shows-tab:hover::before{
+    left: -17px;   
+}
+
+#music-tab:hover::before{
+    left: -13px;   
+}
+
+#credits-tab:hover::before{
+    left: -20px;  
+}
+
 @media(min-width: 0px){
-  #typedtext{
-    font-size: 2.2em;
+  #shirt-home{
+    width: 80%;
+    height: 80%;
+  }
+  .col-5{
+    -ms-flex: 0 0 82.4% !important;
+    flex: 0 0 82.4% !important;
+    max-width: 82.4% !important;
   }
 }
 
-@media(min-width: 650px){
-  #typedtext{
-    font-size: 3.2em;
+@media(min-width: 450px){
+  #shirt-home{
+    width: 70%;
+    height: 70%;
+  }
+  .col-5{
+    -ms-flex: 0 0 71.666667% !important;
+    flex: 0 0 71.666667% !important;
+    max-width: 71.666667% !important;
   }
 }
+
+@media(min-width: 770px){
+  #shirt-home{
+    width: 40%;
+    height: 40%;
+  }
+  .col-5{
+    -ms-flex: 0 0 41.666667% !important;
+    flex: 0 0 41.666667% !important;
+    max-width: 41.666667% !important;
+  }
+}
+
+
+
+
+
+
