--- a/css/shows.css
+++ b/css/shows.css
@@ -1,5 +1,5 @@
 #tickets-link{
-	color:#fff;
+	color:#444;
 	font-weight: 500;
 	letter-spacing: 1px;
 }
@@ -12,11 +12,6 @@
 #flyers-m img{
 	width:60%;
 	height:75%;
-}
-
-
-body{
-	background: url(../img/backgrounds/textured_paper.jpg);
 }
 
 @media(min-width: 0px){
