--- a/css/style.css
+++ b/css/style.css
@@ -4,140 +4,12 @@ html, body{
 }
 
 p{
-	color:#fff;
+	color:#333;
 }
 
-.content{
-	padding-top: 150px;padding-left: 60px;padding-right: 60px;
+ul{
+	list-style: none;
 }
-
-/*Menu*/
-.menu-i{
-    position: fixed;
-    z-index: 1000;
-}
-
-.menu-i a, .menu-i a:hover{
-	color:#fff;
-	text-decoration: none;
-	font-weight: 700;
-}
-
-.menu-i .active{
-	border-bottom: 2px solid #fff;
-}
-
-#menu-item-music{
-    left:0;
-}
-
-#menu-item-shows{
-    right:0;
-}
-
-#menu-item-shop, #menu-item-lookbook{
-    left:0;
-    bottom:0;
-}
-
-#menu-item-credits{
-    right:0;
-    bottom:0;
-}
-
-#menu-item-roy{
-	left: 50%;
-    transform: translate(-50%, 0);
-    z-index:2;
-}
-
-
-@media(min-width: 0px){
-	#menu-item-roy{
-		padding:16px;
-	}
-	#menu-item-roy img{
-		width:130px;
-	}
-	.menu-i a{
-		font-size:15px;
-	}
-	.menu-i{
-		padding: 18px;
-	}
-	.w-img a img{
-		height:17px;
-	}
-	#music-underline{
-		width:64px;
-		height: auto;
-		margin-top: -14px;
-	}
-	#shows-underline{
-		width:69px;height: 8.5px !important;margin-top: -14px;
-	}
-	#menu-item-lookbook a img{
-		height:24px;
-	}
-	#menu-item-credits a img{
-		height:18px;
-	}
-	#lookbook-underline{
-		width:111px;height:8.5px !important;margin-top: 2px;position: absolute;
-	}
-	#credits-underline{
-		width:70px;height: 8.5px !important;margin-top: 2px;position: absolute;
-	}
-}
-
-@media(min-width: 650px){
-	#menu-item-roy{
-		padding:50px;
-	}
-	#menu-item-roy img{
-		width:200px;
-	}
-	.menu-i a{
-		font-size:18px;
-	}
-	.menu-i{
-		padding: 50px;
-	}
-	.w-img a img{
-		height:21px;
-	}
-
-	#menu-item-lookbook a img{
-		height:29px
-	}
-
-	#menu-item-credits a img{
-		height:23px
-	}
-	#music-underline{
-		width:80px;
-		height: auto;
-		margin-top: -14px;
-	}
-	#shows-underline{
-		width:86px;height: 8.5px;margin-top: -14px;
-	}
-	#menu-item-lookbook a img{
-		height:29px;
-	}
-	#menu-item-credits a img{
-		height:23px;
-	}
-	#lookbook-underline{
-		width:134px;height:8.5px;margin-top: 2px;position: absolute;
-	}
-	#credits-underline{
-		width:88px;height: 8.5px;margin-top: 2px;position: absolute;
-	}
-}
-
-
-
 
 
 
