--- a/css/music.css
+++ b/css/music.css
@@ -24,6 +24,7 @@
   /*font-family: 'Source Code Pro';*/
   font-size: 1em;
   position: relative;
+  color:#ff0000eb;
 }
 
 .music-item svg{
@@ -44,7 +45,7 @@
 }
 
 .music-item:hover{
-  color:#777;
+  color:#ff0000a1;
  }
 
 #links{
