--- a/css/lookbook.css
+++ b/css/lookbook.css
@@ -1,39 +1,52 @@
+.lookbook-preview{
+	display: block; 
+	margin:0 auto; 
+	border: 7px solid #333;
+	border-radius: 25px;
+}
+
 #lookbook-imgs img{
-	object-fit: contain;
-    max-width: 80vw;
-    max-height: 100vh;
-    margin: 0 auto;
-    display: block;
-}
-
-.slick-prev{
-	left: 4% !important;
-}
-
-#lookbook-imgs{
-	width: 100%;
-}
-
-.slick-prev, .slick-next{
-	top:50%;
+	/*width:60%;
+	height: 60%;*/
+	width:65%;
+	height: 65%;
+    padding:5px;
 }
 
 
 @media(min-width: 0px){
-	.slick-next{
-		margin-right: 10px;
+	#menu-item-roy{
+		padding-bottom:16px;
 	}
-	.slick-prev{
-		margin-left: 10px;
+	.lookbook-preview{
+	    margin-bottom: 30px;
+	    width: 60%;
 	}
-
+	#hoodie{
+		margin-top: 173px;
+	}
+	#fullpage{
+		height: initial !important;
+	}
 }
 
 @media(min-width: 650px){
-	.slick-next{
-		margin-right: 125px;
-	}
-	.slick-prev{
-		margin-left: 50px;
+	#menu-item-roy{
+		padding-bottom:75px;
 	}
 }
+
+@media(min-width: 768px){
+	.lookbook-preview{
+		width:75%;
+	}
+	#hoodie{
+		margin-top: 0;
+	}
+	#fullpage{
+		height: 100%!important;
+	}
+}
+
+
+
