--- a/css/lookbook.css
+++ b/css/lookbook.css
@@ -1,8 +1,6 @@
 .lookbook-preview{
 	display: block; 
 	margin:0 auto; 
-	border: 7px solid #333;
-	border-radius: 25px;
 }
 
 #lookbook-imgs img{
@@ -19,20 +17,24 @@
 		padding-bottom:16px;
 	}
 	.lookbook-preview{
-	    margin-bottom: 30px;
-	    width: 60%;
-	}
-	#hoodie{
-		margin-top: 173px;
+	    width: 100%;
+    	border-radius: 17px;
+    	border: 3px solid #333;
 	}
 	#fullpage{
-		height: initial !important;
+		margin-top:-52.14px;
 	}
+
 }
 
 @media(min-width: 650px){
 	#menu-item-roy{
 		padding-bottom:75px;
+	}
+	.lookbook-preview{
+	    width: 60%;
+	    border: 7px solid #333;
+		border-radius: 25px;
 	}
 }
 
@@ -40,11 +42,8 @@
 	.lookbook-preview{
 		width:75%;
 	}
-	#hoodie{
-		margin-top: 0;
-	}
 	#fullpage{
-		height: 100%!important;
+		margin-top:-156.39px;
 	}
 }
 
