added music page

--- a/css/home.css
+++ b/css/home.css
@@ -7,7 +7,7 @@
     margin-right: 5px;
 }
 
-#shop-tab, #top-nav-btn, #shirt-prev, #hoodie-prev, #longsleeve-prev{
+#shop-tab, #top-nav-btn, #shirt-prev, #hoodie-prev, #longsleeve-prev, #shows-tab, #music-tab, #catheaven-page, #vans-page, #shell-page, #uk-page, #sucker-page{
   cursor: pointer;
 }
 
