--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,46 @@
 html, body{
     height:100%;
     font-family: "Helvetica Neue", Arial !important;
+    color: #fff;
 }
-
+p{
+	color: #fff;
+}
 a, a:hover {
     text-decoration: none !important;
-    color: #333 !important;
+    color: #fff !important;
+}
+
+/*background video*/
+.videoContainer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+iframe {
+  width: 100%;
+  height: 100%; 
 }
 
 
+#overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: transparent; /* Black background with opacity */
+    z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
+    display: block;
+}
