--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html, body{
     color: #fff;
 }
 p{
-	color: #fff;
+  color: #fff;
 }
 a, a:hover {
     text-decoration: none !important;
@@ -26,10 +26,36 @@ a, a:hover {
   align-items: center;
 }
 iframe {
-  width: 100%;
-  height: 100%; 
+    width: 50%;
+    height: 92%;
+    position: absolute;
 }
 
+#bg-img{
+  width:100%;
+  height:100%;
+}
+
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+}
+
+.bg { 
+    /* The image used */
+    background-image: url("../img/tv-room.jpg");
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 #overlay {
     position: fixed; /* Sit on top of the page content */
