--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body{
     height:100%;
     font-family: "Helvetica Neue", Arial !important;
     color: #fff;
+    background-color: #000 !important; 
 }
 p{
   color: #fff;
@@ -11,62 +12,78 @@ a, a:hover {
     color: #fff !important;
 }
 
-/*background video*/
-.videoContainer {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-iframe {
-    width: 50%;
-    height: 92%;
+#main-icon{
+    width: 12%;
     position: absolute;
+    margin: 15px;
+    z-index: 5;
 }
 
-#bg-img{
-  width:100%;
-  height:100%;
-}
+/*background video*/
 
-#myVideo {
+@media(min-width:0px){
+  #mainVideo {
     position: fixed;
     right: 0;
     bottom: 0;
+    width: 100%; 
+    min-height: 100%;
+  }
+}
+@media(min-width:1100px){
+  #mainVideo {
+    /*width: inherit; */
     min-width: 100%; 
     min-height: 100%;
+    /*margin-right: -80px;*/
+  }
+  #block{
+    margin-right: 100px;
+  }
 }
 
-.bg { 
-    /* The image used */
-    background-image: url("../img/tv-room.jpg");
 
-    /* Full height */
-    height: 100%; 
+@media(min-width:1200px){
+  #mainVideo {
+    margin-right: 0px;
+  }
 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
-#overlay {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
-    top: 0; 
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: transparent; /* Black background with opacity */
-    z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
-    display: block;
+@media(min-width:1230px){
+
 }
+
+@media(min-width:1300px){
+  #block{
+    margin-right: 0px;
+  }
+
+}
+
+/*clickable areas*/
+#block{
+    background-color: red;
+    width: 85%;
+    opacity: 0.6;
+    padding-top: 45%;
+    padding-bottom: 45%;
+    margin-top: 21%;
+    margin-right: 3%;
+}
+
+
+#block2{
+  background-color: red;
+  opacity: 0.6;
+  padding-top: 28%;
+  padding-bottom: 28%;
+  margin-left: -8%;
+  margin-top: 31%;
+  width: 55%;
+}
+
+
+
+
+
