--- a/css/style.css
+++ b/css/style.css
@@ -13,53 +13,22 @@ a, a:hover {
 }
 
 #main-icon{
-    width: 12%;
+    width: 9%;
     position: absolute;
-    margin: 15px;
+    margin: 19px;
     z-index: 5;
+    margin-left: 40px;
+    opacity: 0.9;
 }
 
 /*background video*/
-
-@media(min-width:0px){
-  #mainVideo {
+#mainVideo {
     position: fixed;
     right: 0;
     bottom: 0;
     width: 100%; 
     min-height: 100%;
   }
-}
-@media(min-width:1100px){
-  #mainVideo {
-    /*width: inherit; */
-    min-width: 100%; 
-    min-height: 100%;
-    /*margin-right: -80px;*/
-  }
-  #block{
-    margin-right: 100px;
-  }
-}
-
-
-@media(min-width:1200px){
-  #mainVideo {
-    margin-right: 0px;
-  }
-
-}
-
-@media(min-width:1230px){
-
-}
-
-@media(min-width:1300px){
-  #block{
-    margin-right: 0px;
-  }
-
-}
 
 /*clickable areas*/
 #block{
