--- a/css/shop.css
+++ b/css/shop.css
@@ -2,7 +2,7 @@ html, body{
     height:100%;
     font-family: "Helvetica","Helvetica Neue", Arial !important;
     color: #fff;
-    background-color: #000 !important; 
+    background-color: #383ee6 !important; 
 }
 p{
   color: #fff;
@@ -47,18 +47,70 @@ a, a:hover {
     padding-right: 0px;
     padding-left: 0px;
   }
+  #product-component-a89fcfb0e82{ 
+    transform: scale(1);
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  #second-row{
+    margin-top:-0.4em;
+  }
+  #txt1{
+    font-size: 1em;
+  }
+  #txt2{
+    font-size: 2.6em;
+  }
+  #txt3{
+    font-size: 7px;
+  }
+  #third-row{
+    margin-top:2.9em;
+  }
 }
-@media(min-width: 495px){
+@media(min-width: 355px){
   #product-component-a89fcfb0e82{
     transform: scale(1.1);
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 25px;
+    margin-right: 0px;
+  }
+  #txt3{
+    font-size: 0.5em;
+  }
+}
+@media(min-width: 395px){
+  #product-component-a89fcfb0e82{
+    transform: scale(1.2);
+    margin-left: 45px;
+    margin-right: 25px;
+  }
+  #second-row{
+    margin-top:-0.8em;
+  }
+  #txt1{
+    font-size: 1.2em;
+  }
+  #txt2{
+    font-size: 3.5em;
+  }
+  #txt3{
+    font-size: 0.6em;
+  }
+  #third-row{
+    margin-top:3.5em;
+  }
+}
+@media(min-width: 460px){
+  #product-component-a89fcfb0e82{
+    transform: scale(1.3);
+    margin-left: 75px;
+    margin-right: 60px;
   }
 }
 @media(min-width: 576px){
   #product-component-a89fcfb0e82{
-    transform: scale(1.3);
-    margin-left: 90px;
+    transform: scale(1.4);
+    margin-left: 85px;
     margin-right: 40px;
   }
   #shop-outer, #shop-inner{
@@ -68,16 +120,34 @@ a, a:hover {
 }
 @media(min-width: 768px){
   #product-component-a89fcfb0e82{
-    transform: scale(1.7);
-    margin-left: 155px;
+    transform: scale(1.8);
+    margin-left: 166px;
     margin-right: 140px;
+  }
+  #second-row{
+    margin-top:-1.5em;
+  }
+  #txt1{
+    font-size: 2em;
+  }
+  #txt2{
+    font-size: 5em;
+  }
+  #txt3{
+    font-size: 1em;
+  }
+  #third-row{
+    margin-top:5.5em;
   }
 }
 @media(min-width: 992px){
   #product-component-a89fcfb0e82{
-    transform: scale(1.9);
-    margin-left: 265px;
+    transform: scale(2);
+    margin-left: 277px;
     margin-right: 220px;
+  }
+  #second-row{
+    margin-top:-3em;
   }
 }
 @media(min-width: 1200px){
