updated text on homepage

--- a/wp-content/themes/i-excel/MS_65.css
+++ b/wp-content/themes/i-excel/MS_65.css
@@ -910,8 +910,9 @@ img.wp-smiley,
 }
 
 .topphone .topbarico {
-	padding-top: 4px;
+	padding-top: 2px;
 	line-height: 32px;	
+	margin-right:3px;
 }
 
 
