--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,161 @@
 .nav-container li a {
 	text-transform: uppercase;
 	padding:38px 0px 35px 0px;
+  font-size: 14px;
 }
+
+.navbar{
+  padding: inherit !important;
+}
+
+ul.nav-container, .nav-container > ul{
+  padding: 0 10px 0 0;
+}
+
+h3{
+    font-size: 22px;
+    margin: 22px 0;
+    clear: both;
+    line-height: 1.3;
+    font-weight: 700;
+}
+
+.icon-ar.icon-ar-xl-lg {
+    width: 80px !important;
+    height: 80px !important;
+    font-size: 36px !important;
+    line-height: 2.2 !important;
+    background-color: #8b0d19;
+    color: #fff;
+    border-radius: 2px;
+    text-align: center;
+}
+
+.section-title{
+    border-bottom: solid 1px #ddd;
+    padding-bottom: 15px;
+    margin-top: 39px;
+    margin-bottom: 30px;
+}
+
+
+
+/* Testimonial Carousel */
+#carousel {
+position: relative;
+width:100%;
+}
+
+#slides-container{
+  position: relative;
+  width:60%;
+  margin:0 auto;
+}
+
+#slides {
+overflow: hidden;
+position: relative;
+width: 100%;
+height: 250px;
+}
+
+#slides ul {
+list-style: none;
+width:100%;
+height:250px;
+margin: 0;
+padding: 0;
+position: relative;
+}
+
+ #slides li {
+width:100%;
+height:250px;
+float:left;
+text-align: center;
+position: relative;
+font-family:lato, sans-serif;
+}
+.btn-bar{
+    position: absolute;
+    width: 100%;
+}
+
+#buttons {
+  padding:0 0 5px 0;
+  float:right;
+  width:100%;
+}
+
+#buttons a {
+text-align:center;
+display:block;
+font-size:50px;
+float:left;
+outline:0;
+margin:0 60px;
+color:#b14943;
+text-decoration:none;
+display:block;
+padding:9px;
+width:35px;
+}
+
+a#prev{
+  float:left;
+  top: 50%;
+  transform: translateY(50%);
+}
+
+a#next{
+  float:right;
+  top: 50%;
+  transform: translateY(50%);
+}
+
+a#prev:hover, a#next:hover {
+color:#FFF;
+text-shadow:.5px 0px #b14943;  
+}
+
+.quote-phrase, .quote-author {
+font-family:sans-serif;
+font-weight:300;
+display: table-cell;
+vertical-align: middle;
+padding: 5px 20px;
+font-family:'Lato', Calibri, Arial, sans-serif;
+}
+
+.quote-phrase {
+height: 200px;
+font-size:24px;
+color:#FFF;
+font-style:italic;
+text-shadow:.5px 0px #b14943;  
+}
+
+.quote-marks {
+font-size:30px;
+padding:0 3px 3px;
+position:inherit;
+}
+
+.quote-author {
+font-style:normal;
+font-size:20px;
+color:#b14943;
+font-weight:400;
+height: 30px;
+}
+
+.quoteContainer, .authorContainer {
+display: table;
+width: 100%;
+}
+
+
+
 
 /* preset css */
 img.wp-smiley,img.emoji {
