--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,16 @@ h3{
     margin-bottom: 30px;
 }
 
+#nav_menu-2{
+  width: 50% !important;
+}
+#custom_html-4{
+  width: 50% !important;
+}
+
+.site-footer .site-info{
+  padding-left: 0px;
+}
 
 
 /* Testimonial Carousel */
@@ -94,7 +104,6 @@ display:block;
 font-size:50px;
 float:left;
 outline:0;
-margin:0 60px;
 color:#b14943;
 text-decoration:none;
 display:block;
@@ -115,8 +124,8 @@ a#next{
 }
 
 a#prev:hover, a#next:hover {
-color:#FFF;
-text-shadow:.5px 0px #b14943;  
+color:#933d39;
+
 }
 
 .quote-phrase, .quote-author {
@@ -130,23 +139,19 @@ font-family:'Lato', Calibri, Arial, sans-serif;
 
 .quote-phrase {
 height: 200px;
-font-size:24px;
-color:#FFF;
+color:#575757;
 font-style:italic;
-text-shadow:.5px 0px #b14943;  
 }
 
 .quote-marks {
-font-size:30px;
 padding:0 3px 3px;
 position:inherit;
 }
 
 .quote-author {
 font-style:normal;
-font-size:20px;
-color:#b14943;
-font-weight:400;
+color:#000;
+font-weight:550;
 height: 30px;
 }
 
@@ -155,6 +160,75 @@ display: table;
 width: 100%;
 }
 
+
+@media(min-width: 0px){
+  .quote-phrase{
+    font-size:11px;
+  }
+  .quote-author{
+    font-size:8px;
+  }
+  .quote-marks{
+    font-size:15px;
+  }
+  .section-title{
+    font-size: 1.5rem;
+  }
+  .main-txt{
+    font-size: 1.1em;
+  }
+}
+@media(min-width: 500px){
+  .quote-phrase{
+    font-size:13px;
+  }
+  .quote-author{
+    font-size:9px;
+  }
+  .quote-marks{
+    font-size:19px;
+  }
+  .section-title{
+    font-size: 2rem;
+  }
+  .main-txt{
+    font-size: 1.3em;
+  }
+}
+@media(min-width: 750px){
+  .quote-phrase{
+    font-size:17px;
+  }
+  .quote-author{
+    font-size:13px;
+  }
+  .quote-marks{
+    font-size:23px;
+  }
+}
+@media(min-width: 900px){
+  .quote-phrase{
+    font-size:20px;
+  }
+  .quote-author{
+    font-size:16px;
+  }
+  .quote-marks{
+    font-size:26px;
+  }
+}
+
+@media(min-width: 1200px){
+  .quote-phrase{
+    font-size:24px;
+  }
+  .quote-author{
+    font-size:20px;
+  }
+  .quote-marks{
+    font-size:30px;
+  }
+}
 
 
 
