updated some images

--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@ h3{
 }
 
 #block6 {
-  background-image: url(../img/team.jpg);
+  background-image: url(../img/flex.jpg);
 }
 
 /* Testimonial Carousel */
