--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,7 @@ h3{
 #carousel {
 position: relative;
 width:100%;
+margin-top:70px;
 }
 
 #slides-container{
@@ -463,3 +464,53 @@ body.custom-background { background-color: #f3f1ed; }
   .owl-buttons div:last-child span:before{
     content: '\f501';
   }     
+  
+  
+  
+  
+.footer-row .col-md-6 h3{
+	font-family: Roboto, Georgia, serif;
+	font-weight:400;
+	border-bottom: 1px solid #676767;
+	text-align: left;
+	padding-bottom: 12px;
+	padding-top: 12px;
+	margin-bottom: 4px;
+}
+
+.footer-nav{
+	text-align: left;
+}
+
+.footer-nav .menu-main-menu-container{
+	border-bottom:1px solid #676767;
+	padding-bottom:7px;
+	padding-top:7px;
+}
+
+.footer-nav a{
+	color: #c7c7c7;
+	transition: .25s;
+	-webkit-transition: .25s;
+	
+}
+.footer-nav a:visited {
+    //color: #373737;
+}
+.footer-nav a:hover{
+	color: #8b0d19;
+	text-decoration: none;
+}
+
+.footer-text{
+	color: white;
+	font-family: Roboto, Georgia, serif;
+	font-size: 1rem;
+    font-weight: 400;
+	text-align: left;
+}
+
+#slides{
+	background-color: rgba(255, 255, 255, .8);
+	border-radius: 5px;
+}
