--- a/css/main.css
+++ b/css/main.css
@@ -289,6 +289,18 @@ display: table;
 width: 100%;
 }
 
+/*OUR PROCESS*/
+.flowchart-content{
+    border: 4px solid #8b0d19;
+    border-radius: 60px;
+}
+
+.flowchart-content p{
+    padding: 20px;
+    font-size: 0.98em;
+    padding-top:0px;
+}
+
 
 @media(min-width: 0px){
   .quote-phrase{
@@ -358,6 +370,9 @@ width: 100%;
     font-size:30px;
   }
 }
+
+
+
 
 
 
