--- a/css/home.css
+++ b/css/home.css
@@ -11,3 +11,125 @@
 	line-height: 70px !important;
 	margin-right: -15px;
 }
+
+.testimonial{
+	height: 200px;
+	padding-top:5px;
+	font-weight: 700;
+	font-size:1.2em;
+	color: #dddddd !important
+}
+
+.quoteBy{
+	padding-top:25px !important;
+	font-weight: 800;
+	font-size: 12px;
+	color:#afafaf;
+}
+
+.quotemark-left{
+	font-size: 1.3em;
+    padding-right: 2px;
+}
+.quotemark-right{
+	font-size: 1.3em;
+    padding-left: 2px;
+}
+
+
+
+/* Slider */
+#textSlider.row {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100% !important;
+}
+#textSlider div {
+  color: #fffffff3;
+  font-family: Roboto, Georgia, serif !important;
+  text-transform: uppercase;
+}
+
+.iamCol {
+    text-align: right;
+  float: left;
+  font-weight: 400;
+  font-size:41px;
+}
+.iamCol p:nth-child(2) { margin-top: -20pt !important; }
+.slideCol {
+  text-align: left;
+    overflow: hidden;
+  font-weight: 900;
+  font-size:1em;
+  display: block;
+}
+.slideCol p { margin: 0px !important; }
+
+.scroller {
+   height: 200px;
+   overflow: hidden;
+}
+.scroller .inner { animation: 17s normal infinite running scroll; }
+@keyframes scroll {
+   0%   {margin-top: 0px;}
+   23%  {margin-top: 0px;}
+
+   33%  {margin-top: -200px;}
+   56%  {margin-top: -200px;}
+   
+   66%  {margin-top: -400px;}
+   90%  {margin-top: -400px;}
+
+   100% {margin-top: 0px;}
+}
+
+
+/*==========  Mobile First Method  ==========*/
+
+/* Custom, iPhone Retina */ 
+@media only screen and (min-width : 320px) and (max-width : 400px) {
+	.iamCol {text-align: center;font-size: 19.7px;padding-top: 0px;}
+	#textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
+  .iamCol p { display: inline !important; }
+  .slideCol { text-align: center; margin-top: -20px; font-size: 0.7em; padding-top:40px;}
+}
+@media only screen and (min-width : 401px) and (max-width : 479px) {
+  #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
+  .iamCol { text-align: center; font-size: 25px;padding-top:20px;}
+  .iamCol p { display: inline !important; }
+  .slideCol { text-align: center; margin-top: -20px; font-size: 0.7em; padding-top:40px;}
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (min-width : 480px) and (max-width : 765px) {
+  #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
+  .iamCol { text-align: center; font-size: 30px;padding-top:40px;}
+  .iamCol p { display: inline !important; }
+  .slideCol { text-align: center; margin-top: -20px; font-size: 0.8em; padding-top:20px;}
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) and (max-width : 992px) {
+  #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
+  .iamCol { font-size: 23px;padding-top: 17px;}
+  .iamCol p { display: inline !important; }
+  .slideCol { text-align: center; margin-top: 5px; }
+}
+
+@media only screen and (min-width : 992px) and (max-width : 1050px) {
+	.iamCol{font-size: 35px;}
+}
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) and (max-width : 1200px) {
+  #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
+  .iamCol { text-align: right; }
+  .slideCol {text-align: left; }
+}
+
+
+
+
+
