--- a/css/home.css
+++ b/css/home.css
@@ -16,12 +16,11 @@
 	height: 200px;
 	padding-top:5px;
 	font-weight: 700;
-	font-size:1.2em;
 	color: #dddddd !important
 }
 
 .quoteBy{
-	padding-top:25px !important;
+	padding-top:20px !important;
 	font-weight: 800;
 	font-size: 12px;
 	color:#afafaf;
@@ -72,7 +71,7 @@
    height: 200px;
    overflow: hidden;
 }
-.scroller .inner { animation: 17s normal infinite running scroll; }
+.scroller .inner { animation: 35s normal infinite running scroll; }
 @keyframes scroll {
    0%   {margin-top: 0px;}
    23%  {margin-top: 0px;}
@@ -86,37 +85,106 @@
    100% {margin-top: 0px;}
 }
 
+#tm{
+  position: absolute;
+  font-size: 0.2em;
+}
+
+#homeText2{
+  position: relative;
+  line-height: 0.8;
+  padding-top: 0.5em;
+  padding-right: 15px;
+}
+
+.t-quote{
+  text-transform: none;
+  font-size: 1em;
+}
+#home-content-main{font-size: 1.5rem;
+  margin-bottom: 20px;
+    padding-top: 25px;
+  }
+#home-content-sub{font-size: 1em;
+    border-left: 6.5px solid #8a0d1ad9;
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #f5f5f5;
+}
 
 /*==========  Mobile First Method  ==========*/
 
 /* Custom, iPhone Retina */ 
-@media only screen and (min-width : 320px) and (max-width : 400px) {
+@media only screen and (min-width : 320px) and (max-width : 404px) {
 	.iamCol {text-align: center;font-size: 19.7px;padding-top: 0px;}
 	#textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
   .iamCol p { display: inline !important; }
   .slideCol { text-align: center; margin-top: -20px; font-size: 0.7em; padding-top:40px;}
+  .quoteBy{font-size: 8px}
+  .t-quote{font-size: 0.84em}
+  #home-content-main{font-size: 1.25rem}
+  #home-content-sub{font-size: 0.75rem}
 }
-@media only screen and (min-width : 401px) and (max-width : 479px) {
+@media only screen and (min-width : 320px) and (max-width : 326px) {
+  #tm{top: 49px;}
+}
+@media only screen and (min-width : 327px) and (max-width : 404px) {
+  #tm{top: 13px;}
+  #homeText2{padding-right: 7px;}
+}
+@media only screen and (min-width : 405px) and (max-width : 479px) {
   #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
   .iamCol { text-align: center; font-size: 25px;padding-top:20px;}
   .iamCol p { display: inline !important; }
   .slideCol { text-align: center; margin-top: -20px; font-size: 0.7em; padding-top:40px;}
+  #tm{top: 16px;}
+  #homeText2{padding-right: 7px;}
+  .quoteBy{font-size: 8px}
+  .t-quote{font-size: 0.87em}
+  #home-content-main{font-size: 1.35rem}
+  #home-content-sub{font-size: 0.9rem}
 }
 
 /* Extra Small Devices, Phones */ 
-@media only screen and (min-width : 480px) and (max-width : 765px) {
+@media only screen and (min-width : 480px) and (max-width : 767px) {
   #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
   .iamCol { text-align: center; font-size: 30px;padding-top:40px;}
   .iamCol p { display: inline !important; }
   .slideCol { text-align: center; margin-top: -20px; font-size: 0.8em; padding-top:20px;}
+  #tm{top: 22px;}
+  .quoteBy{font-size: 8px}
+  .t-quote{font-size: 0.85em}
+
 }
 
 /* Small Devices, Tablets */
-@media only screen and (min-width : 768px) and (max-width : 992px) {
+@media only screen and (min-width : 768px) and (max-width : 991px) {
   #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
   .iamCol { font-size: 23px;padding-top: 17px;}
   .iamCol p { display: inline !important; }
   .slideCol { text-align: center; margin-top: 5px; }
+  .quoteBy{font-size: 9px}
+  .t-quote{font-size: 0.7em}
+}
+
+@media only screen and (min-width : 768px) and (max-width : 770px) {
+  #tm{top: 16px;}
+  #homeText2{padding-right: 7px;}
+}
+@media only screen and (min-width : 771px) and (max-width : 827px) {
+  #tm{top: 57px;}
+  #homeText2{padding-right: 7px;}
+}
+@media only screen and (min-width : 828px) and (max-width : 835px) {
+ 
+  #tm{top: 16px;}
+  #homeText2{padding-right: 7px;}
+}
+
+@media only screen and (min-width : 836px) and (max-width : 991px) {
+  #tm{top: 16px;}
+  #homeText2{padding-right: 9px;}
 }
 
 @media only screen and (min-width : 992px) and (max-width : 1050px) {
@@ -130,6 +198,9 @@
   #textSlider.row { margin-right: 0px !important; margin-left: 0px !important; }
   .iamCol { text-align: right; }
   .slideCol {text-align: left; }
+  .quoteBy{font-size: 10.5px}
+  .t-quote{font-size: 0.86em}
+
 }
 
 
