--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,13 @@ h3{
     margin-top: 39px;
     margin-bottom: 30px;
 }
+.section-title2{
+    border-bottom: solid 1px #ddd;
+    padding-bottom: 15px;
+    margin-top: 30px;
+    margin-bottom: 60px;
+    color: #000;
+}
 
 #nav_menu-2{
   width: 50% !important;
@@ -340,6 +347,9 @@ width: 100%;
   .footer-text, .footer-nav a{
       font-size: 0.8rem !important;
   }
+  .section-title2{
+    font-size:1.35em;
+  }
 }
 @media(min-width: 500px){
   .quote-phrase{
@@ -359,6 +369,14 @@ width: 100%;
   }
   .footer-text, .footer-nav a{
       font-size: 1rem !important;
+  }
+  .section-title2{
+    font-size:1.35em;
+  }
+}
+@media(min-width: 607px){
+  .section-title2{
+    font-size:1.73em;
   }
 }
 @media(min-width: 750px){
@@ -525,8 +543,197 @@ body.custom-background { background-color: #f3f1ed; }
     content: '\f501';
   }     
   
+
+/** deliverable **/
+.clickable {
+    margin-bottom: 50px;
+}
+.list {
+    margin: 0;
+    list-style: none;
+    padding: 0;
+}
+.list__item {
+    display: inline-block;
+}
+.list__icon_social {
+    text-align: center;
+    /*border-radius: 50%;*/
+    background-color: #8a0d1a;
+    color: #fff;
+}
+.icon_social {
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+
+.content-title{
+    font-size: 1.2em;
+    font-weight: 600;
+    color: black;
+    margin-bottom: 0;
+}
+
+.content-subtxt{
+  font-size: 0.95em;
+}
+.deliverable-content{
+  margin-top: -3px;
+}
+
+@media(min-width: 0px){
+  .icon-container{
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 32%;
+    flex: 0 0 32%;
+    max-width: 32%;
+  }
+  .deliverable-content{
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 68%;
+      flex: 0 0 68%;
+      max-width: 68%;
+  }
+  .content-subtxt{
+    font-size: 0.75em;
+  }
+  .content-title{
+    font-size: 1.1em;
+  }
+  #market-analysis{
+    padding-bottom:70px;
+  }
+  #technology-scouting{
+    padding-bottom:40px;
+  }
+  #seminars{
+    padding-bottom:40px;
+  }
+  .list__icon_social{
+    padding: 2.25rem;
+    font-size: 2.25rem;
+  }
+  .clickable{
+    height:130px;
+  }
+}
+
+@media(min-width: 410px){
+  .content-subtxt{
+    font-size: 0.8em;
+  }
+  .content-title{
+    font-size: 1.1em;
+  }
+  #market-analysis{
+    padding-bottom:55px;
+  }
+  .list__icon_social{
+    padding: 2.25rem;
+    font-size: 2.25rem;
+  }
+  .clickable{
+    height:115px;
+  }
+  #technology-scouting{
+    padding-bottom:0px;
+  }
+  #seminars{
+    padding-bottom:0px;
+  } 
+}
+
+@media(min-width: 460px){
+  .icon-container{
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .deliverable-content{
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 75%;
+      flex: 0 0 75%;
+      max-width: 75%;
+  }
+  .content-subtxt{
+    font-size: 0.8em;
+  }
+  .content-title{
+    font-size: 1.15em;
+  }
+  #market-analysis{
+    padding-bottom:40px;
+  }
+  .list__icon_social{
+    padding: 2.25rem;
+    font-size: 2.25rem;
+  }
+  .clickable{
+    height:85px;
+  }
+}
+
+@media(min-width: 550px){
+  .icon-container{
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 19%;
+    flex: 0 0 19%;
+    max-width: 19%;
+  }
+  .deliverable-content{
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 81%;
+      flex: 0 0 81%;
+      max-width: 81%;
+  }
+  .content-subtxt{
+    font-size: 0.9em;
+  }
+  .content-title{
+    font-size: 1.15em;
+  }
+  #market-analysis{
+    padding-bottom:35px;
+  }
+  .list__icon_social{
+    padding: 2.55rem;
+    font-size: 2.55rem;
+  }
+}
+
+@media(min-width: 768px){
+  #market-analysis{
+    padding-bottom:20px;
+  }
+}
+
+@media(min-width: 992px){
+  .icon-container{
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 10.5%;
+    flex: 0 0 10.5%;
+    max-width: 10.5%;
+  }
+  .deliverable-content{
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 89.5%;
+      flex: 0 0 89.5%;
+      max-width: 89.5%;
+  }
+  .content-subtxt{
+    font-size: 0.95em;
+  }
+  .content-title{
+    font-size: 1.2em;
+  }
+  #market-analysis{
+    padding-bottom:0px;
+  }
+}
+
   
-  
+/** footer **/
   
 .footer-row .col-md-6 h3{
 	font-family: Roboto, Georgia, serif;
